--- a/twb-sf-rtr1.conf
+++ b/twb-sf-rtr1.conf
@@ -1,4 +1,10 @@
 host-name twb-sf-rtr1
+dhcp
+  network 10.1.1.0
+  netmask 255.255.255.0
+  server 10.1.1.1
+  exclude-start 10.1.1.1
+  exclude-end 10.1.1.99
 management
   ip 6.6.6.6,
   gateway 6.6.6.1
